--- a/editor/initial_code/python_3.tmpl
+++ b/editor/initial_code/python_3.tmpl
@@ -8,7 +8,7 @@ def aggregate_and_count(items:list) -> dict:
 {% endblock start %}
 
 {% block example %}
-print('Example')
+print('Example:')
 print(aggregate_and_count([['a', 1], ['b', 2], ['c', 3], ['a', 5]]))
 {% endblock %}
 
