--- a/editor/initial_code/js_node.tmpl
+++ b/editor/initial_code/js_node.tmpl
@@ -2,24 +2,24 @@
 {% block env %}import assert from "assert";{% endblock env %}
 
 {% block start %}
-function sumTwo(a: number, b: number): number {
-    // your code here
-    return 0;
+function aggregateAndCount(items:[string, number][]): object {
+  // your code here
+  return {};
 }
 {% endblock start %}
 
 {% block example %}
 console.log('Example:');
-console.log(sumTwo(3, 2));
+console.log(aggregateAndCount([['a', 1], ['b', 2], ['c', 3], ['a', 5]]));
 {% endblock %}
 
 // These "asserts" are used for self-checking
 {% block tests %}
 {% for t in tests %}
-assert.equal({% block call %}sumTwo({{t.input.0}}, {{t.input.1}})
-{% endblock %}, {% block result %}{{t.answer|j}}{% endblock %}{% endfor %})
+assert.deepEqual({% block call %}aggregateAndCount({{t.input|j}})
+{% endblock %}, {% block result %}{{t.answer|j}}{% endblock %});{% endfor %}
 {% endblock %}
 
 {% block final %}
-console.log("Coding complete? Click 'Check' to earn cool rewards!");
+console.log("The aggregation is done! Click 'Check' to earn cool rewards!");
 {% endblock final %}
